--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
 }
 repositories {
     maven {url "https://clojars.org/repo/"}
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -28,7 +29,7 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'net.dean.jraw:JRAW:0.9.0'
+    implementation 'com.github.mattbdean:JRAW:7603b89'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'frankiesardo:icepick:3.2.0'
