--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,30 +11,33 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".home.HomeActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".search.SearchSubredditActivity"
+            android:name=".subscriptions.search.SearchSubredditActivity"
             android:label="@string/app_name"
             android:parentActivityName=".home.HomeActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".subscriptions.ManageSubscriptionsActivity"
+            android:label="@string/app_name"
+            android:parentActivityName=".home.HomeActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <provider
-            android:authorities="com.magicbuddha.redditorsdigest"
             android:name=".data.SubscriptionsContentProvider"
-            android:exported="false"/>
+            android:authorities="com.magicbuddha.redditorsdigest"
+            android:exported="false" />
+
     </application>
 
 </manifest>
