--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,17 @@
             android:authorities="com.magicbuddha.redditorsdigest"
             android:exported="false" />
 
+        <activity android:name=".submissions.FullScreenPicture" />
+
+        <receiver android:name=".widget.SubmissionWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/submission_widget_info" />
+        </receiver>
     </application>
 
 </manifest>
