--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,10 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/submission_widget_info" />
         </receiver>
+
+        <service
+            android:name=".widget.SubmissionWidgetService"
+            android:exported="false"></service>
     </application>
 
 </manifest>
