Good progress on Widget. Some weird things are happening when app is killed and opened from the widget. Same issue when trying to dropa brand new widget when app is killed.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,13 @@
 
         <service
             android:name=".widget.SubmissionWidgetService"
-            android:exported="false"></service>
+            android:exported="false" />
+
+        <activity
+            android:name=".submissions.SingleSubmissionActivity"
+            android:label="@string/app_name"
+            android:parentActivityName=".home.HomeActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
