--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,14 +24,15 @@ repositories {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support:support-v4:27.0.2'
-    implementation 'com.android.support:design:27.0.2'
-    implementation 'com.android.support:cardview-v7:27.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:support-v4:27.1.0'
+    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support:cardview-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.github.mattbdean:JRAW:7603b89'
+    implementation 'com.github.mattbdean:JRAW:master-SNAPSHOT'
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.google.firebase:firebase-ads:11.8.0'
+    implementation 'com.google.android.gms:play-services-analytics:11.8.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'frankiesardo:icepick:3.2.0'
     annotationProcessor 'frankiesardo:icepick-processor:3.2.0'
@@ -40,3 +41,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
